--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="container mx-auto flex justify-between items-center flex-wrap">
             <!-- Logo Placeholder -->
             <div class="text-3xl font-bold tracking-wide text-secondary-white">
-                <img src="https://placehold.co/150x50/FFFFFF/FF7F00?text=Casita+Spice+House+Logo" alt="Casita Spice House Logo" class="h-12 rounded-lg">
+                <img src="logocastino.png" alt="Casita Spice House Logo" class="h-12 rounded-lg">
             </div>
 
             <!-- Navigation -->
@@ -172,9 +172,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="relative hero-slideshow container mx-auto my-8 p-4 md:p-8 flex items-center justify-center text-center shadow-lg">
-        <div class="slide active" style="background-image: url('https://placehold.co/1200x600/FF7F00/FFFFFF?text=Delicious+Indian+Cuisine');"></div>
-        <div class="slide" style="background-image: url('https://placehold.co/1200x600/FFFFFF/FF7F00?text=Experience+Authentic+Flavors');"></div>
-        <div class="slide" style="background-image: url('https://placehold.co/1200x600/FF7F00/FFFFFF?text=Fresh+Spices%2C+Perfect+Dishes');"></div>
+        <div class="slide active" style="background-image: url('hero.png');"></div>
+        <div class="slide" style="background-image: url('hero.png');"></div>
+        <div class="slide" style="background-image: url('hero.png');"></div>
 
         <div class="relative z-10 p-8 bg-black bg-opacity-50 rounded-xl shadow-2xl">
             <h1 class="text-4xl md:text-6xl font-extrabold text-white leading-tight mb-4 animate-bounce">
@@ -198,7 +198,7 @@
             </p>
         </div>
         <div class="md:w-1/2 image-container">
-            <img src="https://placehold.co/600x400/FFFFFF/FF7F00?text=About+Us+Image" alt="About Casita Spice House" class="w-full h-auto rounded-lg shadow-xl cursor-pointer">
+            <img src="aboutus.png" alt="About Casita Spice House" class="w-full h-auto rounded-lg shadow-xl cursor-pointer">
         </div>
     </section>
 
@@ -211,10 +211,10 @@
                 <h3 class="text-2xl font-semibold text-primary-orange mb-4 text-center">Curry</h3>
                 <div class="grid grid-cols-2 gap-4">
                     <div class="image-container">
-                        <img src="https://placehold.co/200x150/FFFFFF/FF7F00?text=Curry+Dish+1" alt="Curry Dish 1" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="currybutterchicken.png" alt="Curry Dish 1" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                     <div class="image-container">
-                        <img src="https://placehold.co/200x150/FF7F00/FFFFFF?text=Curry+Dish+2" alt="Curry Dish 2" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="currypalak.png" alt="Curry Dish 2" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                 </div>
             </div>
@@ -224,13 +224,13 @@
                 <h3 class="text-2xl font-semibold text-primary-orange mb-4 text-center">Tandoori</h3>
                 <div class="grid grid-cols-3 gap-4">
                     <div class="image-container">
-                        <img src="https://placehold.co/150x100/FFFFFF/FF7F00?text=Tandoori+1" alt="Tandoori Dish 1" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="tandoorichicken.png" alt="Tandoori Dish 1" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                     <div class="image-container">
-                        <img src="https://placehold.co/150x100/FF7F00/FFFFFF?text=Tandoori+2" alt="Tandoori Dish 2" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="tandoorifish.png" alt="Tandoori Dish 2" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                     <div class="image-container">
-                        <img src="https://placehold.co/150x100/FFFFFF/FF7F00?text=Tandoori+3" alt="Tandoori Dish 3" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="seekh.png" alt="Tandoori Dish 3" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                 </div>
             </div>
@@ -240,13 +240,13 @@
                 <h3 class="text-2xl font-semibold text-primary-orange mb-4 text-center">Biryani</h3>
                 <div class="grid grid-cols-3 gap-4">
                     <div class="image-container">
-                        <img src="https://placehold.co/150x100/FF7F00/FFFFFF?text=Biryani+1" alt="Biryani Dish 1" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="chickenbiryani.png" alt="Biryani Dish 1" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                     <div class="image-container">
-                        <img src="https://placehold.co/150x100/FFFFFF/FF7F00?text=Biryani+2" alt="Biryani Dish 2" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="vegetablebiryani.png" alt="Biryani Dish 2" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                     <div class="image-container">
-                        <img src="https://placehold.co/150x100/FF7F00/FFFFFF?text=Biryani+3" alt="Biryani Dish 3" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="lambbiryani.png" alt="Biryani Dish 3" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                 </div>
             </div>
@@ -256,10 +256,10 @@
                 <h3 class="text-2xl font-semibold text-primary-orange mb-4 text-center">Desserts</h3>
                 <div class="grid grid-cols-2 gap-4">
                     <div class="image-container">
-                        <img src="https://placehold.co/200x150/FFFFFF/FF7F00?text=Dessert+1" alt="Dessert 1" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="gulabjamun.png" alt="Dessert 1" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                     <div class="image-container">
-                        <img src="https://placehold.co/200x150/FF7F00/FFFFFF?text=Dessert+2" alt="Dessert 2" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
+                        <img src="rasgulla.png" alt="Dessert 2" class="w-full h-auto rounded-md shadow-sm cursor-pointer">
                     </div>
                 </div>
             </div>
@@ -282,7 +282,7 @@
             <!-- Butter Chicken -->
             <div class="bg-gray-50 p-6 rounded-lg shadow-md transform hover:scale-105 transition duration-300 ease-in-out">
                 <div class="image-container mb-4">
-                    <img src="https://placehold.co/400x250/FFFFFF/FF7F00?text=Butter+Chicken" alt="Butter Chicken" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
+                    <img src="currybutterchicken.png" alt="Butter Chicken" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
                 </div>
                 <h3 class="text-2xl font-bold text-primary-orange mb-2">Butter Chicken</h3>
                 <p class="text-dark-gray mb-3">Creamy tomato-based curry with tender chicken pieces, a classic Indian delight.</p>
@@ -298,7 +298,7 @@
             <!-- Vegetable Biryani -->
             <div class="bg-gray-50 p-6 rounded-lg shadow-md transform hover:scale-105 transition duration-300 ease-in-out">
                 <div class="image-container mb-4">
-                    <img src="https://placehold.co/400x250/FF7F00/FFFFFF?text=Vegetable+Biryani" alt="Vegetable Biryani" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
+                    <img src="vegetablebiryani.png" alt="Vegetable Biryani" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
                 </div>
                 <h3 class="text-2xl font-bold text-primary-orange mb-2">Vegetable Biryani</h3>
                 <p class="text-dark-gray mb-3">Fragrant basmati rice cooked with assorted vegetables and aromatic spices.</p>
@@ -314,7 +314,7 @@
             <!-- Gulab Jamun -->
             <div class="bg-gray-50 p-6 rounded-lg shadow-md transform hover:scale-105 transition duration-300 ease-in-out">
                 <div class="image-container mb-4">
-                    <img src="https://placehold.co/400x250/FFFFFF/FF7F00?text=Gulab+Jamun" alt="Gulab Jamun" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
+                    <img src="gulabjamun.png" alt="Gulab Jamun" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
                 </div>
                 <h3 class="text-2xl font-bold text-primary-orange mb-2">Gulab Jamun</h3>
                 <p class="text-dark-gray mb-3">Soft, deep-fried milk-solids dumplings, soaked in rose-flavored sugar syrup.</p>
@@ -333,7 +333,7 @@
             <!-- Chicken Tikka Masala -->
             <div class="bg-gray-50 p-6 rounded-lg shadow-md transform hover:scale-105 transition duration-300 ease-in-out">
                 <div class="image-container mb-4">
-                    <img src="https://placehold.co/400x250/FF7F00/FFFFFF?text=Chicken+Tikka+Masala" alt="Chicken Tikka Masala" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
+                    <img src="currybutterchicken.png" alt="Chicken Tikka Masala" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
                 </div>
                 <h3 class="text-2xl font-bold text-primary-orange mb-2">Chicken Tikka Masala</h3>
                 <p class="text-dark-gray mb-3">Grilled chicken pieces in a rich, spiced tomato and cream sauce.</p>
@@ -349,7 +349,7 @@
             <!-- Palak Paneer -->
             <div class="bg-gray-50 p-6 rounded-lg shadow-md transform hover:scale-105 transition duration-300 ease-in-out">
                 <div class="image-container mb-4">
-                    <img src="https://placehold.co/400x250/FFFFFF/FF7F00?text=Palak+Paneer" alt="Palak Paneer" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
+                    <img src="currypalak.png" alt="Palak Paneer" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
                 </div>
                 <h3 class="text-2xl font-bold text-primary-orange mb-2">Palak Paneer</h3>
                 <p class="text-dark-gray mb-3">Cottage cheese cubes in a creamy spinach gravy, a nutritious vegetarian option.</p>
@@ -365,7 +365,7 @@
             <!-- Vegetable Korma -->
             <div class="bg-gray-50 p-6 rounded-lg shadow-md transform hover:scale-105 transition duration-300 ease-in-out">
                 <div class="image-container mb-4">
-                    <img src="https://placehold.co/400x250/FF7F00/FFFFFF?text=Vegetable+Korma" alt="Vegetable Korma" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
+                    <img src="vegetablekorma.png" alt="Vegetable Korma" class="w-full h-auto rounded-lg shadow-sm cursor-pointer">
                 </div>
                 <h3 class="text-2xl font-bold text-primary-orange mb-2">Vegetable Korma</h3>
                 <p class="text-dark-gray mb-3">Mixed vegetables cooked in a rich, mild, and creamy cashew-based sauce.</p>
