--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="relative hero-slideshow container mx-auto my-8 p-4 md:p-8 flex items-center justify-center text-center shadow-lg">
-        <div class="slide active" style="background-image: url('hero.png');"></div>
-        <div class="slide" style="background-image: url('hero.png');"></div>
-        <div class="slide" style="background-image: url('hero.png');"></div>
+        <div class="slide active" style="background-image: url('banner1.png');"></div>
+        <div class="slide" style="background-image: url('banner2.png');"></div>
+        <div class="slide" style="background-image: url('banner1.png');"></div>
 
         <div class="relative z-10 p-8 bg-black bg-opacity-50 rounded-xl shadow-2xl">
             <h1 class="text-4xl md:text-6xl font-extrabold text-white leading-tight mb-4 animate-bounce">
