--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="container mx-auto flex justify-between items-center flex-wrap">
             <!-- Logo Placeholder -->
             <div class="text-3xl font-bold tracking-wide text-secondary-white">
-                <img src="logocastino.png" alt="Casita Spice House Logo" class="h-12 rounded-lg">
+                <img src="logo.png" alt="Casita Spice House Logo" class="h-12 rounded-lg">
             </div>
 
             <!-- Navigation -->
@@ -156,6 +156,7 @@
                     <li><a href="#home" class="hover:text-secondary-white transition duration-300 ease-in-out px-3 py-2 rounded-md">Home</a></li>
                     <li><a href="#about" class="hover:text-secondary-white transition duration-300 ease-in-out px-3 py-2 rounded-md">About Us</a></li>
                     <li><a href="#menu" class="hover:text-secondary-white transition duration-300 ease-in-out px-3 py-2 rounded-md">Menu</a></li>
+                    <li><a href="#offers" class="hover:text-secondary-white transition duration-300 ease-in-out px-3 py-2 rounded-md">Offers</a></li>
                     <li><a href="#contact" class="hover:text-secondary-white transition duration-300 ease-in-out px-3 py-2 rounded-md">Contact</a></li>
                 </ul>
             </nav>
@@ -389,6 +390,18 @@
                 <li><strong>Loyalty Program:</strong> Earn points with every order and redeem for exclusive discounts!</li>
             </ul>
         </div>
+    </section>
+
+    <!-- Offers Banner Section -->
+    <section id="offers" class="container mx-auto my-12 p-6 md:p-10 bg-white rounded-xl shadow-lg text-center">
+        <h2 class="text-4xl font-bold text-primary-orange mb-8 border-b-4 border-primary-orange pb-2 inline-block">Special Offers & Promotions</h2>
+        <div class="image-container">
+            <!-- Placeholder for your PNG banner -->
+            <img src="hero.png"
+                 alt="Special Offers Banner"
+                 class="w-full h-auto rounded-lg shadow-xl cursor-pointer">
+        </div>
+        <p class="text-lg text-dark-gray mt-4">Check back often for exciting new deals!</p>
     </section>
 
     <!-- Contact Us Section -->
