--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="container mx-auto flex justify-between items-center flex-wrap">
             <!-- Logo Placeholder -->
             <div class="text-3xl font-bold tracking-wide text-secondary-white">
-                <img src="logo.png" alt="Casita Spice House Logo" class="h-12 rounded-lg">
+                <img src="logocastino.png" alt="Casita Spice House Logo" class="h-12 rounded-lg">
             </div>
 
             <!-- Navigation -->
